[gd_scene load_steps=47 format=2]

[ext_resource path="res://Scripts/silentWolf/messenger.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI_GameHub.gd" type="Script" id=2]
[ext_resource path="res://Scenes/BuildBoardScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/Buttons/UI_GameHub_Buttons.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ScorePanel.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/GameBKG.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/WinPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/TutorialPanel.gd" type="Script" id=8]
[ext_resource path="res://Scenes/UI/Pause_Pop_Up.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Panel.gd" type="Script" id=10]
[ext_resource path="res://icons/forward/outline_arrow_forward_black_24dp.png" type="Texture" id=11]
[ext_resource path="res://Fonts/ARIALN.TTF" type="DynamicFontData" id=14]
[ext_resource path="res://icons/cog/outline_settings_black_24dp.png" type="Texture" id=15]
[ext_resource path="res://icons/change-swap/outline_swap_horiz_black_48dp.png" type="Texture" id=16]
[ext_resource path="res://icons/merge/outline_add_black_48dp.png" type="Texture" id=17]
[ext_resource path="res://icons/split/outline_call_split_black_48dp.png" type="Texture" id=18]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://icons/cog/outline_settings_black_pressed_24dp.png" type="Texture" id=20]
[ext_resource path="res://icons/forward/outline_arrow_forward_black_pressed_24dp.png" type="Texture" id=23]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.768627, 0.690196, 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.694118, 0.929412, 0.909804, 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.933333, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.694118, 0.929412, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=17]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=22]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=26]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI_GameHub" type="Node2D"]
script = ExtResource( 2 )

[node name="Pause_Pop_Up" parent="." instance=ExtResource( 9 )]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = -0.8909
margin_right = 480.0
margin_bottom = 719.109
color = Color( 1, 0.933333, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToWin" type="Button" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 721.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinPopup" parent="." instance=ExtResource( 7 )]

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 32.0
margin_top = 8.0
margin_right = 458.0
margin_bottom = 52.0
custom_constants/separation = 110
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="UI/HBoxContainer"]
margin_right = 78.0
margin_bottom = 48.0
rect_min_size = Vector2( 78, 48 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESET"
__meta__ = {
"_edit_lock_": true
}

[node name="UndoButton" type="Button" parent="UI/HBoxContainer"]
margin_left = 188.0
margin_right = 266.0
margin_bottom = 48.0
rect_min_size = Vector2( 78, 48 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 0
text = "UNDO"
__meta__ = {
"_edit_lock_": true
}

[node name="SettingsButton" type="TextureButton" parent="UI/HBoxContainer"]
margin_left = 376.0
margin_right = 424.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScorePanel" type="Panel" parent="UI"]
margin_left = 48.0
margin_top = 96.0
margin_right = 418.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UI/ScorePanel"]
margin_left = 24.0
margin_top = 16.0
margin_right = 125.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 8 )
text = "SCORE"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/ScorePanel"]
margin_left = 176.0
margin_top = 10.0
margin_right = 349.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 9 )
text = "9999999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/ScorePanel/Label"]

[node name="TutorialPanel" type="Panel" parent="UI"]
margin_left = 8.0
margin_top = 64.0
margin_right = 472.0
margin_bottom = 176.0
custom_styles/panel = SubResource( 10 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/TutorialPanel"]
margin_left = 8.0
margin_right = 456.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="UI/TutorialPanel"]
margin_left = 408.0
margin_top = 64.0
margin_right = 456.0
margin_bottom = 112.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="UI/TutorialPanel"]
position = Vector2( -29, -107.135 )

[node name="Collider" type="CollisionShape2D" parent="UI/TutorialPanel/Area2D"]
position = Vector2( 260.89, 177.299 )

[node name="BoardSizeLabel" type="Label" parent="UI"]
margin_left = 50.0
margin_top = 160.0
margin_right = 417.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBoard" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="GameBoard"]
margin_top = 192.0
margin_right = 480.0
margin_bottom = 627.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardNode" parent="GameBoard/PanelContainer" instance=ExtResource( 3 )]
z_index = 1

[node name="messenger" type="Node2D" parent="GameBoard/PanelContainer/BoardNode"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="GameBoard/PanelContainer/BoardNode/messenger"]

[node name="Sprite" type="Sprite" parent="GameBoard/PanelContainer"]
visible = false
position = Vector2( 240, 216 )
scale = Vector2( 7.5, 6.75 )
texture = ExtResource( 6 )

[node name="Panel" type="Panel" parent="GameBoard"]
margin_top = 624.0
margin_right = 480.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 14 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameBoard/Panel"]
margin_left = 24.0
margin_right = 448.0
margin_bottom = 96.0
custom_constants/separation = 68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpliButton" type="Button" parent="GameBoard/Panel/HBoxContainer"]
margin_right = 96.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_pressed = Color( 0.0431373, 0, 0.439216, 1 )
custom_constants/hseparation = 20
icon = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="SwapPlayerButton" type="Button" parent="GameBoard/Panel/HBoxContainer"]
margin_left = 164.0
margin_right = 260.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_pressed = Color( 0.0431373, 0, 0.439216, 1 )
custom_constants/hseparation = 20
icon = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="AddButton" type="Button" parent="GameBoard/Panel/HBoxContainer"]
margin_left = 328.0
margin_right = 424.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/disabled = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_pressed = Color( 0.0431373, 0, 0.439216, 1 )
custom_constants/hseparation = 15
icon = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Background/BackToWin" to="GameBoard/PanelContainer/BoardNode" method="_on_BackToWin_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/ResetButton" to="GameBoard/PanelContainer/BoardNode" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/UndoButton" to="GameBoard/PanelContainer/BoardNode" method="_on_UndoButton_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/SettingsButton" to="UI" method="_on_SettingsButton_pressed"]
[connection signal="timeout" from="UI/ScorePanel/Label/Timer" to="UI/ScorePanel" method="_on_Timer_timeout"]
[connection signal="continueScript" from="UI/TutorialPanel" to="UI/TutorialPanel" method="_on_continue_script"]
[connection signal="revertScript" from="UI/TutorialPanel" to="UI/TutorialPanel" method="_on_revert_script"]
[connection signal="pressed" from="UI/TutorialPanel/NextButton" to="UI/TutorialPanel" method="_on_NextButton_pressed"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/SpliButton" to="GameBoard/PanelContainer/BoardNode" method="_on_SpliButton_pressed"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/SpliButton" to="UI/TutorialPanel" method="_on_PlayerSplit"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/SwapPlayerButton" to="GameBoard/PanelContainer/BoardNode" method="_on_SwapPlayerButton_pressed"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/SwapPlayerButton" to="UI/TutorialPanel" method="_on_PlayerChanged"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/AddButton" to="GameBoard/PanelContainer/BoardNode" method="_on_AddButton_pressed"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/AddButton" to="UI/TutorialPanel" method="_on_merge_toggled"]
[connection signal="pressed" from="GameBoard/Panel/HBoxContainer/AddButton" to="GameBoard/Panel" method="_on_AddButton_pressed"]
